@@ -37,18 +37,6 @@ void flush();
 namespace Cairo
 {
 
-#ifndef GDKMM_DISABLE_DEPRECATED
-/** Sets the specified Gdk::Color as the source color of the Cairo context.
- * @param @context The cairo context.
- * @param color The color to use as the source color. 
- *
- * @deprecated Use the overloaded function that takes a const RefPtr
- * reference.
- *
- * @newin2p10
- */
-void set_source_color(::Cairo::RefPtr< ::Cairo::Context >& context, const Gdk::Color& color);
-#endif
 
 /** Sets the specified Gdk::Color as the source color of the Cairo context.
  * @param @context The cairo context.
@@ -57,21 +45,6 @@ void set_source_color(::Cairo::RefPtr< ::Cairo::Context >& context, const Gdk::C
  * @newin2p12
  */
 void set_source_color(const ::Cairo::RefPtr< ::Cairo::Context >& context, const Gdk::Color& color);
-
-#ifndef GDKMM_DISABLE_DEPRECATED
-/** Sets the given pixbuf as the source pattern for the Cairo context. The pattern has an extend mode of CAIRO_EXTEND_NONE and is aligned so that the origin of pixbuf is pixbuf_x, pixbuf_y.
- * @param @context The cairo context.
- * @param pixbuf A Gdk::Pixbuf
- * @param pixbuf_x X coordinate of location to place upper left corner of pixbuf.
- * @param pixbuf_y Y coordinate of location to place upper left corner of pixbuf.
- *
- * @deprecated Use the overloaded function that takes a const RefPtr
- * reference.
- *
- * @newin2p10
- */
-void set_source_pixbuf(::Cairo::RefPtr< ::Cairo::Context >& context, const Glib::RefPtr<Gdk::Pixbuf>& pixbuf, double pixbuf_x, double pixbuf_y);
-#endif
 
 /** Sets the given pixbuf as the source pattern for the Cairo context. The pattern has an extend mode of CAIRO_EXTEND_NONE and is aligned so that the origin of pixbuf is pixbuf_x, pixbuf_y.
  * @param @context The cairo context.
@@ -83,21 +56,6 @@ void set_source_pixbuf(::Cairo::RefPtr< ::Cairo::Context >& context, const Glib:
  */
 void set_source_pixbuf(const ::Cairo::RefPtr< ::Cairo::Context >& context, const Glib::RefPtr<Gdk::Pixbuf>& pixbuf, double pixbuf_x, double pixbuf_y);
 
-#ifndef GDKMM_DISABLE_DEPRECATED
-/** Sets the given pixbuf as the source pattern for the Cairo context. The pattern has an extend mode of CAIRO_EXTEND_NONE and is aligned so that the origin of pixbuf is pixmap_x, pixmap_y.
- * @param @context The cairo context.
- * @param pixmap A Gdk::Pixmap
- * @param pixmap_x X coordinate of location to place upper left corner of pixmap.
- * @param pixmap_y Y coordinate of location to place upper left corner of pixmap.
- *
- * @deprecated Use the overloaded function that takes a const RefPtr
- * reference.
- *
- * @newin2p10
- */
-void set_source_pixmap(::Cairo::RefPtr< ::Cairo::Context >& context, const Glib::RefPtr<Gdk::Pixmap>& pixmap, double pixmap_x, double pixmap_y);
-#endif
-
 /** Sets the given pixbuf as the source pattern for the Cairo context. The pattern has an extend mode of CAIRO_EXTEND_NONE and is aligned so that the origin of pixbuf is pixmap_x, pixmap_y.
  * @param @context The cairo context.
  * @param pixmap A Gdk::Pixmap
@@ -108,20 +66,6 @@ void set_source_pixmap(::Cairo::RefPtr< ::Cairo::Context >& context, const Glib:
  */
 void set_source_pixmap(const ::Cairo::RefPtr< ::Cairo::Context >& context, const Glib::RefPtr<Gdk::Pixmap>& pixmap, double pixmap_x, double pixmap_y);
 
-#ifndef GDKMM_DISABLE_DEPRECATED
-/** Adds the given rectangle to the current path of the context.
- *
- * @param context A cairo context.
- * @param rectangle A rectangle to add to the path of the context. 
- *
- * @deprecated Use add_rectangle_to_path() instead
- * reference.
- *
- * @newin2p10
- */
-void rectangle(::Cairo::RefPtr< ::Cairo::Context >& context, const Gdk::Rectangle& rectangle);
-#endif
-
 /** Adds the given rectangle to the current path of the context.
  *
  * @param context A cairo context.
@@ -130,19 +74,6 @@ void rectangle(::Cairo::RefPtr< ::Cairo::Context >& context, const Gdk::Rectangl
  * @newin2p12
  */
 void add_rectangle_to_path(const ::Cairo::RefPtr< ::Cairo::Context >& context, const Gdk::Rectangle& rectangle);
-
-#ifndef GDKMM_DISABLE_DEPRECATED
-/** Adds the given region to the current path of the context.
- *
- * @param context A cairo context.
- * @param region A region to add to the path of the context. 
- *
- * @deprecated Use add_region_to_path() instead
- *
- * @newin2p10
- */
-void region(::Cairo::RefPtr< ::Cairo::Context >& context, const Gdk::Region& region);
-#endif
 
 /** Adds the given region to the current path of the context.
  *
