@@ -79,11 +79,6 @@ public:
    */
   void set_active_text(const Glib::ustring& text);
 
-  //There is a clear() method in the CellLayout base class, so this would cause confusion.
-  //TODO: Remove this when we can break API.
-  /// @deprecated See clear_items(). Since 2.8.
-  void clear();
-
   /** Remove all items from the drop-down menu.
    */
   void clear_items();
