@@ -43,8 +43,9 @@ protected:
   _CTOR_DEFAULT()
 public:
   _WRAP_CREATE()
+  
+  _IGNORE(gtk_icon_theme_get_for_screen) //deprecated
   _WRAP_METHOD(static Glib::RefPtr<IconTheme> get_default(), gtk_icon_theme_get_default, refreturn)
-  _WRAP_METHOD(static Glib::RefPtr<IconTheme> get_for_screen(const Glib::RefPtr<Gdk::Screen>& screen), gtk_icon_theme_get_for_screen, refreturn)
   _WRAP_METHOD(void set_screen(const Glib::RefPtr<Gdk::Screen>& screen), gtk_icon_theme_set_screen)
   void set_search_path(const Glib::ArrayHandle<Glib::ustring>& path);
   Glib::ArrayHandle<Glib::ustring> get_search_path() const;
