@@ -62,7 +62,7 @@ public:
   _WRAP_METHOD(const Menu* get_submenu() const, gtk_menu_item_get_submenu, constversion)
   bool has_submenu() const;
 
-  _WRAP_METHOD(void remove_submenu(), gtk_menu_item_remove_submenu)
+  _IGNORE(gtk_menu_item_remove_submenu) //deprecated
   _WRAP_METHOD(void select(), gtk_menu_item_select)
   _WRAP_METHOD(void deselect(), gtk_menu_item_deselect)
   _WRAP_METHOD(void activate(), gtk_menu_item_activate)
