@@ -111,12 +111,13 @@ public:
   /** A selection object for Gtk::TreeView.
    */
   typedef TreeSelection Selection;
-  /**
-     Default constructor
+
+  /** Default constructor.
    */
   _CTOR_DEFAULT()
+
   /**
-     Constructor that binds to a TreeModel
+     Constructor that binds to a TreeModel.
    */
   _WRAP_CTOR(TreeView(const Glib::RefPtr<TreeModel>& model), gtk_tree_view_new_with_model)
 
