@@ -1,3 +1,13 @@
+2009-05-05  Murray Cumming  <murrayc@murrayc.com>
+
+	* gdk/gdkmm/general.[h|cc]:
+	* gdk/src/event.hg:
+	* gtk/gtkmm/comboboxentrytext.[h|cc]:
+	* gtk/gtkmm/comboboxtext.[h|cc]:
+	* gtk/src/icontheme.hg:
+	* gtk/src/menuitem.hg:
+	* gtk/src/treeview.hg: Removed more deprecated methods.
+
 2009-05-01  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/filechooser.hg: Use std::string for filenames, instead of ustring, 
